--- a/Das.StrongNameSigner/Das.StrongNameSigner.csproj
+++ b/Das.StrongNameSigner/Das.StrongNameSigner.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard20</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <VersionPrefix>1.0.0.0</VersionPrefix>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <NuspecFile>Das.StrongNameSigner.nuspec</NuspecFile>
   </PropertyGroup>
 
   <ItemGroup>
