--- a/Das.StrongNameSigner/DaS.StrongNameSigner.targets
+++ b/Das.StrongNameSigner/DaS.StrongNameSigner.targets
@@ -1,4 +1,5 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <UsingTask TaskName="DaS.StrongNameSigner.SignUnsignedAssembliesBuildTask" AssemblyFile="$(MSBuildThisFileDirectory)DaS.StrongNameSigner.dll" />
 
   <Target Name="StrongNameSignerTarget" AfterTargets="AfterResolveReferences">
