--- a/Das.StrongNameSigner/Das.StrongNameSigner.nuspec
+++ b/Das.StrongNameSigner/Das.StrongNameSigner.nuspec
@@ -16,8 +16,8 @@
     <tags>strongname assembly gac unsigned strong name automatic</tags>
   </metadata>
   <files>
-    <file src="DaSStrongNameSigner.targets" target="build\" />
-	<file src="signingkey.snk" target="build\" />
-	<file src="bin\release\net461\*.dll" target="build\" />
+    <file src="DaS.StrongNameSigner.targets" target="build\" />
+	  <file src="signingkey.snk" target="build\" />
+	  <file src="bin\release\net461\*.dll" target="build\" />
   </files>
 </package>
